TIKA-3260 -- update rotation.py to work with python3 and modern version of dependencies. Fix cross-platform problems with Windows.